Fix spacing of hyphen in track info bar - part 2
Instead of a hyphen in HTML, it is now dynamically inserted before the **trackInfo-album**-element. There's also spaces surrounding the hyphen.

--- a/src/app/themes/volumio3/components/track-info/volumio3-track-info.scss
+++ b/src/app/themes/volumio3/components/track-info/volumio3-track-info.scss
@@ -73,6 +73,9 @@
       }
     }
 
+    #trackInfo-album:before {
+      content: "\00a0\2010\00a0";
+    }
     #trackInfo-album{
       color: $theme-text-light-color;
     }
